turtleart.diskfourth.DiskFourth.scala.error
Compilation error:
DiskFourth:2: error: value foreach is not a member of Int
  for (i <- 90){
            ^