turtleart.diskfourth.DiskFourth.scala.code
override def run() {
  for (i <- 90){
    avance(100);recule(100);droite(1)
  }
}